--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "hipsum",
     "displayName": "hipsum",
     "description": "Inserts hipster placeholder text (lorem ipsum) from http://hipsterjesus.com/ into the editor.",
-    "version": "1.0.6",
+    "version": "1.0.7",
     "publisher": "third774",
     "engines": {
         "vscode": "^1.0.1"
@@ -11,6 +11,9 @@
         "url": "https://github.com/third774/vscode-hipsum/issues"
     },
     "scripts": {
+        "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
+        "compile": "node ./node_modules/vscode/bin/compile -watch -p ./",
+        "postinstall": "node ./node_modules/vscode/bin/install",
         "test": "mocha"
     },
     "homepage": "https://github.com/third774/vscode-hipsum",
@@ -32,11 +35,6 @@
                 "title": "hipsum"
             }
         ]
-    },
-    "scripts": {
-        "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
-        "compile": "node ./node_modules/vscode/bin/compile -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install"
     },
     "devDependencies": {
         "typescript": "^1.8.5",
